welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: not found: value getMondeHaute
    for (i<-1 to getMondeHaute) {
                 ^ColumnByColumn:4: error: ambiguous reference to overloaded definition,
both method ecritMessage in class AbstractBuggle of type (x$1: Int)Unit
and  method ecritMessage in class AbstractBuggle of type (x$1: String)Unit
match expected type ?
      ecritMessage
      ^